--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ html {
  */
 
 hr {
-    display: block;
+    display:inline-flex;
     height: 1px;
     border: 0;
     border-top: 1px solid #ccc;
@@ -106,6 +106,7 @@ body {
   padding: 2em;
   font-size: 1.25em;
   height: 100%;
+  background-color: #f1f1f1;
 }
 
 .wrapper {
@@ -118,17 +119,27 @@ body {
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
-  line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
+  line-height: 2em;
+  font-size: 1em;
+  background-color: #581845;
+  height: 275px;
   display: flex;
   width: 30%;
   justify-content: center;
   align-items: center;
+  border-radius: 5%;
+  padding: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.div-2 {
+    margin-top: 6em;
+    background-color: #900C3F;
+}
 
+.div-3 {
+    margin-top: 12em;
+}
 
 
 /* ==========================================================================
