--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ html {
  */
 
 hr {
-    display:inline-flex;
+    display: block;
     height: 1px;
     border: 0;
     border-top: 1px solid #ccc;
@@ -60,6 +60,7 @@ img,
 svg,
 video {
     vertical-align: middle;
+
 }
 
 /*
@@ -97,48 +98,79 @@ textarea {
 
 
 html {
-  background-color: #fff;
-  height: 100%;
+    height: 100%;
+    width: 100%;
+    background: url(../img/denis-volkov--YHAK8jHimY-unsplash.jpg) no-repeat center fixed;
+    background-size: 1500px 717px;
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
-  padding: 2em;
-  font-size: 1.25em;
-  height: 100%;
-  background-color: #f1f1f1;
+    font-family: 'Lora', sans-serif;
+    padding: 0em 2em;
+    font-size: 1.1em;
+    color: #fff;
+    display: flex;
+    justify-content: center;
 }
 
-.wrapper {
-  /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
-  display: flex;
-  justify-content: space-between;
+.flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    max-width: 1200px;
 }
 
-.div-1, .div-2, .div-3 {
-  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
-  line-height: 2em;
-  font-size: 1em;
-  background-color: #581845;
-  height: 275px;
-  display: flex;
-  width: 30%;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5%;
-  padding: 15px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+p span {
+    font-family: 'Lora', sans-serif;
+    font-weight: 700;
 }
 
-.div-2 {
-    margin-top: 6em;
-    background-color: #900C3F;
+header,
+footer {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
 }
 
-.div-3 {
-    margin-top: 12em;
+header h1 {
+    font-family: 'Lora', sans-serif;
+    font-size: 3em;
+}
+
+main {
+    width: 100%;
+    display: flex;
+    justify-content: left;
+    border-bottom: 2px solid #fff;
+    padding-bottom: 1em;
+}
+
+main p {
+    font-size: 1.1em;
+}
+
+.flex-items {
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.5em;
+    font-size: 1.1em;
+}
+
+#div-2 p {
+    border-left: 1px solid #fff;
+    border-right: 1px solid #fff;
+    padding: 0 40px;
+}
+
+footer {
+    border-top: 2px solid #fff;
+}
+
+footer span {
+    margin-top: 10px;
+    padding: 5px;
 }
 
 
@@ -208,8 +240,10 @@ body {
 
 .clearfix:before,
 .clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+    content: " ";
+    /* 1 */
+    display: table;
+    /* 2 */
 }
 
 .clearfix:after {
@@ -223,9 +257,9 @@ body {
    ========================================================================== */
 
 @media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
 
@@ -236,11 +270,13 @@ body {
    ========================================================================== */
 
 @media print {
+
     *,
     *:before,
     *:after {
         background: transparent !important;
-        color: #000 !important; /* Black prints faster:
+        color: #000 !important;
+        /* Black prints faster:
                                    http://www.sanbeiji.com/archives/953 */
         box-shadow: none !important;
         text-shadow: none !important;
